libqt6c/src/libqfocusframe.hpp

#pragma once
#ifndef SRCC_LIBQFOCUSFRAME_HPP
#define SRCC_LIBQFOCUSFRAME_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFocusFrame QFocusFrame;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOption QStyleOption;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QFocusFrame* QFocusFrame_new(QWidget* parent);
QFocusFrame* QFocusFrame_new2();
QMetaObject* QFocusFrame_MetaObject(const QFocusFrame* self);
void* QFocusFrame_Metacast(QFocusFrame* self, const char* param1);
int QFocusFrame_Metacall(QFocusFrame* self, int param1, int param2, void** param3);
void QFocusFrame_SetWidget(QFocusFrame* self, QWidget* widget);
QWidget* QFocusFrame_Widget(const QFocusFrame* self);
bool QFocusFrame_Event(QFocusFrame* self, QEvent* e);
bool QFocusFrame_EventFilter(QFocusFrame* self, QObject* param1, QEvent* param2);
void QFocusFrame_PaintEvent(QFocusFrame* self, QPaintEvent* param1);
void QFocusFrame_InitStyleOption(const QFocusFrame* self, QStyleOption* option);
void QFocusFrame_OnMetaObject(const QFocusFrame* self, intptr_t slot);
QMetaObject* QFocusFrame_SuperMetaObject(const QFocusFrame* self);
void QFocusFrame_OnMetacast(QFocusFrame* self, intptr_t slot);
void* QFocusFrame_SuperMetacast(QFocusFrame* self, const char* param1);
void QFocusFrame_OnMetacall(QFocusFrame* self, intptr_t slot);
int QFocusFrame_SuperMetacall(QFocusFrame* self, int param1, int param2, void** param3);
void QFocusFrame_OnEvent(QFocusFrame* self, intptr_t slot);
bool QFocusFrame_SuperEvent(QFocusFrame* self, QEvent* e);
void QFocusFrame_OnEventFilter(QFocusFrame* self, intptr_t slot);
bool QFocusFrame_SuperEventFilter(QFocusFrame* self, QObject* param1, QEvent* param2);
void QFocusFrame_OnPaintEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperPaintEvent(QFocusFrame* self, QPaintEvent* param1);
void QFocusFrame_OnInitStyleOption(const QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperInitStyleOption(const QFocusFrame* self, QStyleOption* option);
int QFocusFrame_DevType(const QFocusFrame* self);
void QFocusFrame_OnDevType(const QFocusFrame* self, intptr_t slot);
int QFocusFrame_SuperDevType(const QFocusFrame* self);
void QFocusFrame_SetVisible(QFocusFrame* self, bool visible);
void QFocusFrame_OnSetVisible(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperSetVisible(QFocusFrame* self, bool visible);
QSize* QFocusFrame_SizeHint(const QFocusFrame* self);
void QFocusFrame_OnSizeHint(const QFocusFrame* self, intptr_t slot);
QSize* QFocusFrame_SuperSizeHint(const QFocusFrame* self);
QSize* QFocusFrame_MinimumSizeHint(const QFocusFrame* self);
void QFocusFrame_OnMinimumSizeHint(const QFocusFrame* self, intptr_t slot);
QSize* QFocusFrame_SuperMinimumSizeHint(const QFocusFrame* self);
int QFocusFrame_HeightForWidth(const QFocusFrame* self, int param1);
void QFocusFrame_OnHeightForWidth(const QFocusFrame* self, intptr_t slot);
int QFocusFrame_SuperHeightForWidth(const QFocusFrame* self, int param1);
bool QFocusFrame_HasHeightForWidth(const QFocusFrame* self);
void QFocusFrame_OnHasHeightForWidth(const QFocusFrame* self, intptr_t slot);
bool QFocusFrame_SuperHasHeightForWidth(const QFocusFrame* self);
QPaintEngine* QFocusFrame_PaintEngine(const QFocusFrame* self);
void QFocusFrame_OnPaintEngine(const QFocusFrame* self, intptr_t slot);
QPaintEngine* QFocusFrame_SuperPaintEngine(const QFocusFrame* self);
void QFocusFrame_MousePressEvent(QFocusFrame* self, QMouseEvent* event);
void QFocusFrame_OnMousePressEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperMousePressEvent(QFocusFrame* self, QMouseEvent* event);
void QFocusFrame_MouseReleaseEvent(QFocusFrame* self, QMouseEvent* event);
void QFocusFrame_OnMouseReleaseEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperMouseReleaseEvent(QFocusFrame* self, QMouseEvent* event);
void QFocusFrame_MouseDoubleClickEvent(QFocusFrame* self, QMouseEvent* event);
void QFocusFrame_OnMouseDoubleClickEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperMouseDoubleClickEvent(QFocusFrame* self, QMouseEvent* event);
void QFocusFrame_MouseMoveEvent(QFocusFrame* self, QMouseEvent* event);
void QFocusFrame_OnMouseMoveEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperMouseMoveEvent(QFocusFrame* self, QMouseEvent* event);
void QFocusFrame_WheelEvent(QFocusFrame* self, QWheelEvent* event);
void QFocusFrame_OnWheelEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperWheelEvent(QFocusFrame* self, QWheelEvent* event);
void QFocusFrame_KeyPressEvent(QFocusFrame* self, QKeyEvent* event);
void QFocusFrame_OnKeyPressEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperKeyPressEvent(QFocusFrame* self, QKeyEvent* event);
void QFocusFrame_KeyReleaseEvent(QFocusFrame* self, QKeyEvent* event);
void QFocusFrame_OnKeyReleaseEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperKeyReleaseEvent(QFocusFrame* self, QKeyEvent* event);
void QFocusFrame_FocusInEvent(QFocusFrame* self, QFocusEvent* event);
void QFocusFrame_OnFocusInEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperFocusInEvent(QFocusFrame* self, QFocusEvent* event);
void QFocusFrame_FocusOutEvent(QFocusFrame* self, QFocusEvent* event);
void QFocusFrame_OnFocusOutEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperFocusOutEvent(QFocusFrame* self, QFocusEvent* event);
void QFocusFrame_EnterEvent(QFocusFrame* self, QEnterEvent* event);
void QFocusFrame_OnEnterEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperEnterEvent(QFocusFrame* self, QEnterEvent* event);
void QFocusFrame_LeaveEvent(QFocusFrame* self, QEvent* event);
void QFocusFrame_OnLeaveEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperLeaveEvent(QFocusFrame* self, QEvent* event);
void QFocusFrame_MoveEvent(QFocusFrame* self, QMoveEvent* event);
void QFocusFrame_OnMoveEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperMoveEvent(QFocusFrame* self, QMoveEvent* event);
void QFocusFrame_ResizeEvent(QFocusFrame* self, QResizeEvent* event);
void QFocusFrame_OnResizeEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperResizeEvent(QFocusFrame* self, QResizeEvent* event);
void QFocusFrame_CloseEvent(QFocusFrame* self, QCloseEvent* event);
void QFocusFrame_OnCloseEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperCloseEvent(QFocusFrame* self, QCloseEvent* event);
void QFocusFrame_ContextMenuEvent(QFocusFrame* self, QContextMenuEvent* event);
void QFocusFrame_OnContextMenuEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperContextMenuEvent(QFocusFrame* self, QContextMenuEvent* event);
void QFocusFrame_TabletEvent(QFocusFrame* self, QTabletEvent* event);
void QFocusFrame_OnTabletEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperTabletEvent(QFocusFrame* self, QTabletEvent* event);
void QFocusFrame_ActionEvent(QFocusFrame* self, QActionEvent* event);
void QFocusFrame_OnActionEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperActionEvent(QFocusFrame* self, QActionEvent* event);
void QFocusFrame_DragEnterEvent(QFocusFrame* self, QDragEnterEvent* event);
void QFocusFrame_OnDragEnterEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperDragEnterEvent(QFocusFrame* self, QDragEnterEvent* event);
void QFocusFrame_DragMoveEvent(QFocusFrame* self, QDragMoveEvent* event);
void QFocusFrame_OnDragMoveEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperDragMoveEvent(QFocusFrame* self, QDragMoveEvent* event);
void QFocusFrame_DragLeaveEvent(QFocusFrame* self, QDragLeaveEvent* event);
void QFocusFrame_OnDragLeaveEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperDragLeaveEvent(QFocusFrame* self, QDragLeaveEvent* event);
void QFocusFrame_DropEvent(QFocusFrame* self, QDropEvent* event);
void QFocusFrame_OnDropEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperDropEvent(QFocusFrame* self, QDropEvent* event);
void QFocusFrame_ShowEvent(QFocusFrame* self, QShowEvent* event);
void QFocusFrame_OnShowEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperShowEvent(QFocusFrame* self, QShowEvent* event);
void QFocusFrame_HideEvent(QFocusFrame* self, QHideEvent* event);
void QFocusFrame_OnHideEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperHideEvent(QFocusFrame* self, QHideEvent* event);
bool QFocusFrame_NativeEvent(QFocusFrame* self, const libqt_string eventType, void* message, intptr_t* result);
void QFocusFrame_OnNativeEvent(QFocusFrame* self, intptr_t slot);
bool QFocusFrame_SuperNativeEvent(QFocusFrame* self, const libqt_string eventType, void* message, intptr_t* result);
void QFocusFrame_ChangeEvent(QFocusFrame* self, QEvent* param1);
void QFocusFrame_OnChangeEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperChangeEvent(QFocusFrame* self, QEvent* param1);
int QFocusFrame_Metric(const QFocusFrame* self, int param1);
void QFocusFrame_OnMetric(const QFocusFrame* self, intptr_t slot);
int QFocusFrame_SuperMetric(const QFocusFrame* self, int param1);
void QFocusFrame_InitPainter(const QFocusFrame* self, QPainter* painter);
void QFocusFrame_OnInitPainter(const QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperInitPainter(const QFocusFrame* self, QPainter* painter);
QPaintDevice* QFocusFrame_Redirected(const QFocusFrame* self, QPoint* offset);
void QFocusFrame_OnRedirected(const QFocusFrame* self, intptr_t slot);
QPaintDevice* QFocusFrame_SuperRedirected(const QFocusFrame* self, QPoint* offset);
QPainter* QFocusFrame_SharedPainter(const QFocusFrame* self);
void QFocusFrame_OnSharedPainter(const QFocusFrame* self, intptr_t slot);
QPainter* QFocusFrame_SuperSharedPainter(const QFocusFrame* self);
void QFocusFrame_InputMethodEvent(QFocusFrame* self, QInputMethodEvent* param1);
void QFocusFrame_OnInputMethodEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperInputMethodEvent(QFocusFrame* self, QInputMethodEvent* param1);
QVariant* QFocusFrame_InputMethodQuery(const QFocusFrame* self, int param1);
void QFocusFrame_OnInputMethodQuery(const QFocusFrame* self, intptr_t slot);
QVariant* QFocusFrame_SuperInputMethodQuery(const QFocusFrame* self, int param1);
bool QFocusFrame_FocusNextPrevChild(QFocusFrame* self, bool next);
void QFocusFrame_OnFocusNextPrevChild(QFocusFrame* self, intptr_t slot);
bool QFocusFrame_SuperFocusNextPrevChild(QFocusFrame* self, bool next);
void QFocusFrame_TimerEvent(QFocusFrame* self, QTimerEvent* event);
void QFocusFrame_OnTimerEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperTimerEvent(QFocusFrame* self, QTimerEvent* event);
void QFocusFrame_ChildEvent(QFocusFrame* self, QChildEvent* event);
void QFocusFrame_OnChildEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperChildEvent(QFocusFrame* self, QChildEvent* event);
void QFocusFrame_CustomEvent(QFocusFrame* self, QEvent* event);
void QFocusFrame_OnCustomEvent(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperCustomEvent(QFocusFrame* self, QEvent* event);
void QFocusFrame_ConnectNotify(QFocusFrame* self, const QMetaMethod* signal);
void QFocusFrame_OnConnectNotify(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperConnectNotify(QFocusFrame* self, const QMetaMethod* signal);
void QFocusFrame_DisconnectNotify(QFocusFrame* self, const QMetaMethod* signal);
void QFocusFrame_OnDisconnectNotify(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperDisconnectNotify(QFocusFrame* self, const QMetaMethod* signal);
void QFocusFrame_UpdateMicroFocus(QFocusFrame* self);
void QFocusFrame_OnUpdateMicroFocus(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperUpdateMicroFocus(QFocusFrame* self);
void QFocusFrame_Create(QFocusFrame* self);
void QFocusFrame_OnCreate(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperCreate(QFocusFrame* self);
void QFocusFrame_Destroy(QFocusFrame* self);
void QFocusFrame_OnDestroy(QFocusFrame* self, intptr_t slot);
void QFocusFrame_SuperDestroy(QFocusFrame* self);
bool QFocusFrame_FocusNextChild(QFocusFrame* self);
void QFocusFrame_OnFocusNextChild(QFocusFrame* self, intptr_t slot);
bool QFocusFrame_SuperFocusNextChild(QFocusFrame* self);
bool QFocusFrame_FocusPreviousChild(QFocusFrame* self);
void QFocusFrame_OnFocusPreviousChild(QFocusFrame* self, intptr_t slot);
bool QFocusFrame_SuperFocusPreviousChild(QFocusFrame* self);
QObject* QFocusFrame_Sender(const QFocusFrame* self);
void QFocusFrame_OnSender(const QFocusFrame* self, intptr_t slot);
QObject* QFocusFrame_SuperSender(const QFocusFrame* self);
int QFocusFrame_SenderSignalIndex(const QFocusFrame* self);
void QFocusFrame_OnSenderSignalIndex(const QFocusFrame* self, intptr_t slot);
int QFocusFrame_SuperSenderSignalIndex(const QFocusFrame* self);
int QFocusFrame_Receivers(const QFocusFrame* self, const char* signal);
void QFocusFrame_OnReceivers(const QFocusFrame* self, intptr_t slot);
int QFocusFrame_SuperReceivers(const QFocusFrame* self, const char* signal);
bool QFocusFrame_IsSignalConnected(const QFocusFrame* self, const QMetaMethod* signal);
void QFocusFrame_OnIsSignalConnected(const QFocusFrame* self, intptr_t slot);
bool QFocusFrame_SuperIsSignalConnected(const QFocusFrame* self, const QMetaMethod* signal);
void QFocusFrame_Delete(QFocusFrame* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif